objects/vlocity_ins__Occurrence__c.object
<CustomObject>
    <description>An occurrence is an event, happening on a specific day or over a number of days, that can result in the filing of an insurance claim. Examples include building fires, hail storms and tornadoes. An unusually severe occurrence may be considered a catastrophe when claims are expected to reach a certain monetary threshold and more than a certain number of policyholders and insurance companies are affected. Catastrophes are issued a catastrophe code (or CAT Code).</description>
    <fields>
        <fullName>vlocity_ins__CatCodeSource__c</fullName>
        <label>CAT Code Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>FEMA</fullName>
                </value>
                <value>
                    <fullName>FICO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CatCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CAT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LloydsCatCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Lloyd&apos;s CAT Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LlyodsCatCode__c</fullName>
        <description>DEPRECATED. Use LloydsCatCode__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Llyods CAT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OccurrenceNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Occurrence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalIncurred__c</fullName>
        <label>Total Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalOutstanding__c</fullName>
        <label>Total Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPaid__c</fullName>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Occurrence</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Occurrence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occurrences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>